# gymtracker-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  IMPLEMENTATION_COMPLETE.md  ImplementationSumary.md  PROMPT.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  todo_list.md  types.md
.ai/: Project.md
.ai/architecture/: api-contracts.md  database.md  diagrams.md  folder-structure.md
.ai/product/: business-rules.md  entities.md  requirements.md  use-cases.md  vision.md
.ai/prompts/: code-review.md  create-endpoint.md  create-feature.md  create-migration.md  create-model.md  create-repository.md  create-service.md  create-tests.md
.ai/skills/: api-design.md  clean-architecture.md  fastapi.md  security.md  sqlalchemy.md  testing.md
scripts/: create_repositories.py  seed.py
src/: main.py  security.py  security_admin.py
src/api/: api.py
src/core/: config.py  dependencies.py  errors.py  logging.py
src/database/: base.py  session.py
src/models/: exercise.py  user.py  workout.py
src/repositories/: alternative_repository.py  equipment_repository.py  exercise_repository.py  instruction_repository.py  movement_group_repository.py  muscle_group_repository.py  user_repository.py  workout_repository.py
src/routers/: admin.py  admin_api.py  admin_users.py  alternatives.py  auth.py  catalog.py  equipment.py  exercises.py  health.py  instructions.py  media.py  (+5 more)
tests/: conftest.py  test_alternatives.py  test_exercises.py  test_instructions.py  test_media.py  test_users.py  test_workouts.py
(+24 files in other folders)
